fix web overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -60,7 +60,6 @@ html {
   font-family: "Nunito", sans-serif;
   background: #c4e2fc;
   overscroll-behavior: contain;
-  overflow: hidden;
   touch-action: pan-x pan-y;
 }
 
